Feature(SettingsPage) 세팅 페이지 추가, 오리진, 가이드 페이지 네비게이션 포함 및 테마 스위치 이동, 가이드 수정

--- a/src/app/[locale]/guide/en.guide.mdx
+++ b/src/app/[locale]/guide/en.guide.mdx
@@ -36,7 +36,12 @@ You can load recipes sent by email by clicking the 'arrow' icon and registering 
 ### Cameras page
 This is a page that organizes Fujifilm cameras, and you can see the cameras that support the simulation with the film simulation badge at the top.
 
-### Origins page
+### Settings Page
+This page has buttons to go to the origin and guide pages, and allows you to adjust settings such as themes.
+
+
+#### Origins page
 This page lists Henri-Pierre Chavaz, who organized the database, and the people who created the recipes.
 
-
+#### Theme Switch
+Light mode ↔ Dark mode
