Feature(hideCardImage) 레시피 카드 이미지를 숨길 수 있는 기능 추가, Card => RecipeCard 이름 변경

--- a/src/app/[locale]/guide/en.guide.mdx
+++ b/src/app/[locale]/guide/en.guide.mdx
@@ -45,3 +45,6 @@ This page lists Henri-Pierre Chavaz, who organized the database, and the people 
 
 #### Theme Switch
 Light mode ↔ Dark mode
+
+#### Hide card image
+If you don't need the image on the recipe card, you can hide it.
