Feature(CustomCard, CustomList) 커스텀 레시피 공유 기능 추가, Page(note) 패치 노트 페이지 추가, Version() version 1.1.0

--- a/src/app/[locale]/guide/en.guide.mdx
+++ b/src/app/[locale]/guide/en.guide.mdx
@@ -43,6 +43,9 @@ This page has buttons to go to the origin and guide pages, and allows you to adj
 #### Origins page
 This page lists Henri-Pierre Chavaz, who organized the database, and the people who created the recipes.
 
+#### Patch Notes
+This is a patch notes page that contains information about added features or fixed bugs depending on the version.
+
 #### Theme Switch
 Light mode ↔ Dark mode
 
