Fix(CustomList) 공유 레시피 추가 안 되는 현상 수정, Version() v1.1.1

--- a/src/app/[locale]/note/en.note.mdx
+++ b/src/app/[locale]/note/en.note.mdx
@@ -8,3 +8,8 @@ And when you visit the current site by clicking the sharing URL, the shared reci
 
 ### Patch Notes
 Patch notes have been added to describe features added or bugs fixed depending on the version.
+
+## Bug fix
+
+### Unable to add shared custom recipe
+Fixed an issue where recipes were not added in the deployment environment.
