--- a/src/app/[locale]/note/ko.note.mdx
+++ b/src/app/[locale]/note/ko.note.mdx
@@ -8,3 +8,10 @@
 
 ### 패치 노트 페이지
 버전에 따라 추가된 기능이나 고쳐진 버그 등에 대한 내용을 기재하는 패치 노트를 추가했습니다.
+
+# v1.1.1
+
+## 버그 픽스
+
+### 공유 커스텀 레시피 추가 안 되는 현상
+배포 환경에서 레시피가 추가되지 않는 현상이 발생해서 수정했습니다.
