--- a/src/app/[locale]/guide/en.guide.mdx
+++ b/src/app/[locale]/guide/en.guide.mdx
@@ -36,6 +36,23 @@ You can load recipes sent by email by clicking the 'arrow' icon and registering 
 ### Cameras page
 This is a page that organizes Fujifilm cameras, and you can see the cameras that support the simulation with the film simulation badge at the top.
 
+### AI Curator Page 🆕
+An AI-powered film recipe recommendation system.  
+Ask questions in natural language and AI will recommend personalized recipes that match your situation and preferences.
+
+#### How to Use
+1. **Ask Questions**: Ask naturally like "Recommend a winter-feeling recipe for X-T5" or "Show me cinematic film recipes"
+2. **AI Analysis**: Analyzes your question to understand camera model, desired mood, and shooting conditions
+3. **Personalized Recommendations**: Provides customized suggestions based on verified recipes in our database
+4. **Image Preview**: See real-time image processing results with recommended settings applied
+5. **Save as Custom**: Save preferred settings as personal recipes
+
+#### Example Questions
+- "Recommend a high-contrast black and white recipe for X-T30"
+- "Recommend a refreshing summer recipe for X-PRO3"
+- "Recommend a cinematic film recipe for X-100V"
+- "Show me warm-toned recipes good for portrait photography"
+
 ### Settings Page
 This page has buttons to go to the origin and guide pages, and allows you to adjust settings such as themes.
 
