--- a/src/app/[locale]/note/en.note.mdx
+++ b/src/app/[locale]/note/en.note.mdx
@@ -15,3 +15,32 @@ Patch notes have been added to describe features added or bugs fixed depending o
 
 ### Unable to add shared custom recipe
 Fixed an issue where recipes were not added in the deployment environment.
+
+# v2.0.0
+
+## Major Feature Addition
+
+### 🤖 AI Curator (Chatbot)
+An AI-powered film recipe recommendation system has been added.
+
+#### Core Features
+- **Natural Language Queries**: Ask questions in natural language like "Recommend a winter-feeling recipe" or "Show me cinematic film recipes"
+- **Personalized Recommendations**: Customized recipe suggestions based on camera model, shooting conditions, and desired mood
+- **Real-time Image Preview**: See how your photos would look with AI-recommended settings applied in real-time
+- **Integration with Existing Recipes**: Leverages our verified recipe database for reliable recommendations
+
+#### Technical Features
+- **LangChain + Google Gemini**: Cutting-edge AI technology for natural language processing
+- **Vector Search**: Semantic recipe search powered by Pinecone
+- **Image Processing**: Real-time film simulation using Sharp
+- **Structured Responses**: Consistent response format using Zod schemas
+
+#### How to Use
+1. Select "AI Curator" from the navigation menu
+2. Ask questions about recipes in natural language
+3. Review AI-curated recipes with image previews
+4. Save preferred settings as custom recipes
+
+#### Supported Languages
+- Korean: Natural Korean language queries and responses
+- English: Full English support for global users
