--- a/src/app/[locale]/guide/ko.guide.mdx
+++ b/src/app/[locale]/guide/ko.guide.mdx
@@ -1,11 +1,11 @@
-# 가이드
+# 📖 가이드
 
-## 웹사이트 개요
+## 🌐 웹사이트 개요
 > [Henri-Pierre Chavaz](https://hpchavaz-photography.blogspot.com/) 가 정리한 [레시피 데이터베이스](https://docs.google.com/spreadsheets/d/11PvZ7rOnwmbz5VylVIvzOuWwEa83c0DweAlBwJ2pZJc/edit#gid=1775432829)를 이용해서
 > 다양한 레시피를 편리하게 검색해서 볼 수 있도록 하고 개인적으로 사용하는 레시피들을 메모 형식으로 관리할 수 있도록 만든 웹사이트입니다.
 
 
-## 일러두기
+## ⚠️ 일러두기
 - 1. 로컬 데이터  
 데이터베이스가 연동되어 있지 않고 브라우저의 로컬스토리지를 사용하기 때문에 '북마크'나 '커스텀' 페이지 등에서 저장한 데이터가 브라우저 간에 공유되지 않습니다.
 - 2. 반응형 디자인  
@@ -13,62 +13,90 @@
 - 3. PWA  
 Progressive Web App 기능이 적용되어 있어서 웹사이트에서 설치 후 PC 또는 모바일 기기에서 앱처럼 사용하실 수도 있습니다.
 
-## 페이지 별 가이드
+## 📋 페이지 별 가이드
 
-### 북마크 페이지
+### 🔖 북마크 페이지
 '레시피' 페이지에서 레시피 카드 우측 상단의 아이콘을 클릭한 카드들을 모아볼 수 있는 페이지입니다.  
 카드 우측 상단의 아이콘을 눌러서 북마크를 해제할 수 있으며 해당 페이지를 벗어나기 전에 다시 클릭하면 북마크를 해제하지 않을 수 있습니다.  
 페이지 상단의 필터(필름, 카메라, 센서 버튼), 정렬(4번째 버튼), 흑백 토글 버튼으로 카드를 모아서 볼 수 있으며
 **이 필터 기능은 '레시피', '커스텀' 페이지에서도 동일한 방식으로 사용할 수 있습니다.**
 
-### 레시피 페이지
+### 📝 레시피 페이지
 데이터베이스에 정리된 레시피들을 카드 형태로 조회할 수 있는 페이지입니다.  
 레시피 데이터 자체는 서버에서 가져오는 것이 아니지만
 카드마다 이미지 파일을 불러오기 때문에 요금제의 데이터가 충분하지 않은 경우 정렬을 먼저 하신 뒤에 스크롤을 내리시는 것을 추천드립니다.
 레시피 카드 우측 상단의 북마크 아이콘을 누르시면 '북마크' 페이지에서 조회 가능하며
 카메라 이름을 클릭하면 세부 설정을 볼 수 있습니다.
 
-### 커스텀 페이지
+### ✏️ 커스텀 페이지
 나만의 레시피 설정을 메모해 둘 수 있는 페이지입니다.  
 레시피 이름, 카메라, 바탕 필름을 선택한 뒤 바로 아래의 메뉴들을 좌우로 스크롤해서 설정을 조절할 수 있습니다.
 설정 조절 후 우측 상단의 '+ 문서' 아이콘을 클릭하면 로컬 스토리지에 레시피 데이터를 저장합니다.
 '메일' 아이콘 클릭 시 이메일 입력 후 현재 저장된 레시피들을 JSON 파일로 받아볼 수 있으며
 '화살표' 아이콘을 클릭한 뒤 JSON 파일을 등록하면 이메일로 전송한 레시피들을 불러올 수 있습니다.
 
-### 카메라 페이지
+### 📷 카메라 페이지
 후지필름 카메라들이 정리되어 있는 페이지이며 상단의 필름 시뮬레이션 배지로 해당 시뮬레이션을 지원하는 카메라들을 모아볼 수 있습니다.
 
 
-### AI 큐레이터 페이지 🆕
+### 🤖 AI 큐레이터 페이지 (메인 페이지)
 인공지능 기반 필름 레시피 추천 시스템입니다.  
 자연스러운 한국어로 질문하면 AI가 상황과 취향에 맞는 맞춤형 레시피를 추천해드립니다.
 
-#### 사용 방법
-1. **질문 입력**: "X-T5 겨울 느낌 나는 레시피 추천해줘", "영화 같은 분위기 레시피 알려줘" 등 자연스럽게 질문
+#### ✨ 핵심 기능
+- **자연어 질문**: "겨울 느낌 나는 레시피 추천해줘", "영화 같은 분위기 레시피 알려줘" 등 자연스러운 한국어로 질문 가능
+- **맞춤형 추천**: 카메라 모델, 촬영 상황, 원하는 분위기를 고려한 개인화된 레시피 추천
+- **실시간 이미지 미리보기**: AI가 추천한 설정을 적용한 이미지 보정 결과를 실시간으로 확인
+- **기존 레시피 연동**: 데이터베이스의 검증된 레시피들과 연계하여 신뢰성 있는 추천 제공
+- **커스텀 저장**: 마음에 드는 설정을 개인 레시피로 저장
+
+#### 🔧 기술적 특징
+- **LangChain + Google Gemini**: 최신 AI 기술을 활용한 자연어 처리
+- **벡터 검색**: Pinecone을 통한 의미 기반 레시피 검색
+- **이미지 처리**: Sharp를 활용한 실시간 필름 시뮬레이션 적용
+- **구조화된 응답**: Zod 스키마를 통한 일관된 응답 형식
+
+#### 📝 사용 방법
+1. **질문 입력**: 채팅창에 원하는 레시피에 대해 자연어로 질문 입력
 2. **AI 분석**: 질문을 분석하여 카메라 모델, 원하는 분위기, 촬영 상황을 파악
 3. **맞춤 추천**: 데이터베이스의 검증된 레시피를 바탕으로 개인화된 추천 제공
-4. **이미지 미리보기**: 추천된 설정을 적용한 이미지 보정 결과를 실시간으로 확인
-5. **커스텀 저장**: 마음에 드는 설정을 개인 레시피로 저장
+4. **이미지 미리보기**: 추천된 설정을 적용한 이미지 보정 결과를 슬라이더로 비교 확인
+5. **원본 레시피 확인**: 추천 레시피의 원본 정보 및 링크 제공
+6. **커스텀 저장**: 마음에 드는 설정을 개인 레시피로 저장
 
-#### 추천 질문 예시
+#### 💡 추천 질문 예시
 - "X-T30 고대비 흑백 레시피 추천해줘"
 - "X-PRO3 청량한 여름 느낌 레시피 추천해줘"
 - "X-100V 영화 느낌 필름 레시피 추천해줘"
 - "포트레이트 촬영에 좋은 따뜻한 톤 레시피 알려줘"
+- "겨울 풍경 촬영에 좋은 레시피 알려줘"
 
-### 설정 페이지
-오리진, 가이드 페이지로 가는 버튼이 있고 테마 등의 설정을 조절할 수 있는 페이지입니다.
+#### 🌍 지원 언어
+- 한국어: 자연스러운 한국어 질문과 응답
+- 영어: 글로벌 사용자를 위한 영어 지원
 
-#### 오리진 페이지
+### ⚙️ 설정 페이지
+오리진, 가이드, 패치 노트 페이지로 가는 버튼이 있고 테마 등의 설정을 조절할 수 있는 페이지입니다.
+
+#### 👥 오리진 페이지
 데이터베이스를 정리한 Henri-Pierre Chavaz 와 레시피를 만든이들의 목록이 있는 페이지입니다.
 
-#### 패치 노트 페이지
-버전에 따라 추가된 기능이나 고쳐진 버그 등에 대한 내용을 기재하는 패치 노트 페이지입니다.
+#### 📖 가이드 페이지
+현재 보고 계신 이 페이지로, 웹사이트의 각 기능에 대한 상세한 사용법을 안내합니다.
 
-#### 테마 스위치
-라이트 모드 ↔ 다크 모드
+#### 📋 패치 노트 페이지
+버전에 따라 추가된 기능이나 고쳐진 버그 등에 대한 내용을 기재하는 패치 노트 페이지입니다.  
+MDX 형식으로 작성되어 마크다운 문법을 지원합니다.
 
-#### 카드 이미지 숨기기
-레시피 카드의 이미지가 필요 없는 경우 숨길 수 있습니다.
+#### 📷 카메라 페이지
+후지필름 카메라 목록 페이지로 이동하는 버튼입니다.
+
+#### 🎨 테마 스위치
+라이트 모드 ↔ 다크 모드 전환 기능입니다.  
+DaisyUI 테마 시스템을 활용하여 부드러운 테마 전환을 제공합니다.
+
+#### 🖼️ 카드 이미지 숨기기
+레시피 카드의 이미지가 필요 없는 경우 숨길 수 있습니다.  
+데이터 사용량을 줄이고 싶거나 빠른 로딩을 원할 때 유용합니다.
 
 
