--- a/src/app/[locale]/note/ko.note.mdx
+++ b/src/app/[locale]/note/ko.note.mdx
@@ -1,46 +1,76 @@
-# v1.1.0
+# 📝 v1.1.0
 
-## 기능 추가
+## ✨ 기능 추가
 
-### 커스텀 레시피 공유 기능
+### 🔗 커스텀 레시피 공유 기능
 커스텀 레시피 카드 확장 버튼(↓) 클릭 후 하단 클립보드 버튼 클릭 시 공유용 URL 이 클립보드에 복사됩니다.  
 공유용 URL 을 눌러 현재 사이트로 방문하게 되면 공유 레시피가 자동으로 커스텀 레시피 목록에 추가됩니다.
 
-### 패치 노트 페이지
+### 📋 패치 노트 페이지
 버전에 따라 추가된 기능이나 고쳐진 버그 등에 대한 내용을 기재하는 패치 노트를 추가했습니다.
 
-# v1.1.1
+# 🔧 v1.1.1
 
-## 버그 픽스
+## 🐛 버그 픽스
 
-### 공유 커스텀 레시피 추가 안 되는 현상
+### 🔗 공유 커스텀 레시피 추가 안 되는 현상
 배포 환경에서 레시피가 추가되지 않는 현상이 발생해서 수정했습니다.
 
-# v2.0.0
+# 🚀 v2.0.0
 
-## 주요 기능 추가
+## ✨ 주요 기능 추가
 
-### 🤖 AI 큐레이터 (Chatbot)
-인공지능 기반 필름 레시피 추천 시스템이 추가되었습니다.
+### 🤖 AI 큐레이터 (메인 페이지로 이동)
+인공지능 기반 필름 레시피 추천 시스템이 추가되었습니다.  
+기존 레시피 페이지가 메인에서 분리되고, AI 큐레이터가 새로운 메인 페이지가 되었습니다.
 
-#### 핵심 기능
+#### ✨ 핵심 기능
 - **자연어 질문**: "겨울 느낌 나는 레시피 추천해줘", "영화 같은 분위기 레시피 알려줘" 등 자연스러운 한국어로 질문 가능
 - **맞춤형 추천**: 카메라 모델, 촬영 상황, 원하는 분위기를 고려한 개인화된 레시피 추천
-- **실시간 이미지 미리보기**: AI가 추천한 설정을 적용한 이미지 보정 결과를 실시간으로 확인
+- **실시간 이미지 미리보기**: AI가 추천한 설정을 적용한 이미지 보정 결과를 슬라이더로 비교 확인
 - **기존 레시피 연동**: 데이터베이스의 검증된 레시피들과 연계하여 신뢰성 있는 추천 제공
+- **원본 레시피 정보**: 추천된 레시피의 원본 정보 및 상세 링크 제공
+- **커스텀 저장**: 마음에 드는 설정을 개인 레시피로 저장
 
-#### 기술적 특징
+#### 🔧 기술적 특징
 - **LangChain + Google Gemini**: 최신 AI 기술을 활용한 자연어 처리
 - **벡터 검색**: Pinecone을 통한 의미 기반 레시피 검색
 - **이미지 처리**: Sharp를 활용한 실시간 필름 시뮬레이션 적용
 - **구조화된 응답**: Zod 스키마를 통한 일관된 응답 형식
+- **실시간 로딩 상태**: 단계별 처리 과정을 시각적으로 표시
 
-#### 사용 방법
-1. 네비게이션에서 "AI 큐레이터" 메뉴 선택
-2. 원하는 레시피에 대해 자연어로 질문 입력
-3. AI가 분석한 맞춤형 레시피와 이미지 미리보기 확인
-4. 마음에 드는 설정을 커스텀 레시피로 저장
+#### 🎨 UI/UX 개선
+- **채팅 인터페이스**: 직관적인 대화형 UI
+- **이미지 비교 슬라이더**: 보정 전후 이미지를 쉽게 비교
+- **애니메이션 효과**: Framer Motion을 활용한 부드러운 전환
+- **반응형 디자인**: 모바일 최적화된 레이아웃
 
-#### 지원 언어
+#### 📝 사용 방법
+1. 메인 페이지(AI 큐레이터)에서 채팅창에 질문 입력
+2. AI가 질문을 분석하여 맞춤형 레시피 추천
+3. 이미지 미리보기로 보정 결과 확인
+4. 원본 레시피 정보 및 링크 확인
+5. 마음에 드는 설정을 커스텀 레시피로 저장
+
+#### 🌍 지원 언어
 - 한국어: 자연스러운 한국어 질문과 응답
 - 영어: 글로벌 사용자를 위한 영어 지원
+
+## 🛠️ 기술 스택 업데이트
+
+### 🎨 프론트엔드
+- **Next.js 15**: 최신 App Router 및 React 19 지원
+- **Tailwind CSS v4**: 최신 CSS 프레임워크
+- **DaisyUI v5**: 업데이트된 UI 컴포넌트 라이브러리
+- **TypeScript 5.8**: 향상된 타입 안전성
+
+### 🤖 AI & 백엔드
+- **LangChain 0.3**: 최신 AI 프레임워크
+- **LangGraph**: 복잡한 AI 워크플로우 관리
+- **Google Gemini**: Gemini Flash 및 Gemini Flash Lite 모델 지원
+- **Pinecone**: 벡터 데이터베이스 최적화
+
+### ⚙️ 개발 도구
+- **ESLint 9**: 최신 린팅 규칙
+- **pnpm**: 빠른 패키지 관리
+- **MDX**: 마크다운 기반 콘텐츠 관리
