docs: 패키지 버전 2.0.0 -> 2.1.0, 문서 업데이트

--- a/src/app/[locale]/guide/en.guide.mdx
+++ b/src/app/[locale]/guide/en.guide.mdx
@@ -60,6 +60,7 @@ Ask questions in natural language and AI will recommend personalized recipes tha
 4. **Image Preview**: Compare before/after image processing results with a slider
 5. **Original Recipe Info**: View original recipe information and links
 6. **Save as Custom**: Save preferred settings as personal recipes
+7. **Chat History**: View and reload previous conversations from the history panel
 
 #### 💡 Example Questions
 - "Recommend a high-contrast black and white recipe for X-T30"
