--- a/src/app/[locale]/note/en.note.mdx
+++ b/src/app/[locale]/note/en.note.mdx
@@ -31,6 +31,7 @@ The existing recipes page has been separated from the main page, and AI Curator 
 - **Integration with Existing Recipes**: Leverages our verified recipe database for reliable recommendations
 - **Original Recipe Information**: Provides original recipe details and links
 - **Save as Custom**: Save preferred settings as personal recipes
+- **Chat History Management**: Save previous conversations and reload them from the history panel
 
 #### 🔧 Technical Features
 - **LangChain + Google Gemini**: Cutting-edge AI technology for natural language processing
@@ -74,3 +75,19 @@ The existing recipes page has been separated from the main page, and AI Curator 
 - **ESLint 9**: Latest linting rules
 - **pnpm**: Fast package management
 - **MDX**: Markdown-based content management
+
+# 🔧 v2.1.0
+
+## ✨ Feature Improvements
+
+### 🗂️ Enhanced Chat History Management
+- **Common Component**: Extracted `ConfirmModal` component for reusability
+
+### 🎨 UI/UX Improvements
+- **Animation Effects**: Smooth modal transitions using Framer Motion
+- **Responsive Design**: Optimized modal display for mobile environments
+
+### 📦 Component Structure Enhancement
+- **Modularization**: Improved code reusability through common modal component separation
+- **Type Safety**: Strict type definitions using TypeScript
+- **Performance Optimization**: Efficient modal rendering using Portal
