--- a/src/app/[locale]/note/ko.note.mdx
+++ b/src/app/[locale]/note/ko.note.mdx
@@ -31,6 +31,7 @@
 - **기존 레시피 연동**: 데이터베이스의 검증된 레시피들과 연계하여 신뢰성 있는 추천 제공
 - **원본 레시피 정보**: 추천된 레시피의 원본 정보 및 상세 링크 제공
 - **커스텀 저장**: 마음에 드는 설정을 개인 레시피로 저장
+- **대화 기록 관리**: 이전 대화 내용을 저장하고 히스토리에서 다시 불러오기 가능
 
 #### 🔧 기술적 특징
 - **LangChain + Google Gemini**: 최신 AI 기술을 활용한 자연어 처리
@@ -74,3 +75,20 @@
 - **ESLint 9**: 최신 린팅 규칙
 - **pnpm**: 빠른 패키지 관리
 - **MDX**: 마크다운 기반 콘텐츠 관리
+
+# 🔧 v2.1.0
+
+## ✨ 기능 개선
+
+### 🗂️ 대화 기록 관리 개선
+- **공통 컴포넌트화**: `ConfirmModal` 컴포넌트를 분리하여 재사용 가능하도록 개선
+- **UX 개선**: 모달이 열려있을 때 대화 기록 패널이 닫히지 않도록 수정
+
+### 🎨 UI/UX 개선
+- **애니메이션 효과**: Framer Motion을 활용한 부드러운 모달 전환 효과
+- **반응형 디자인**: 모바일 환경에서도 최적화된 모달 표시
+
+### 📦 컴포넌트 구조 개선
+- **모듈화**: 공통 모달 컴포넌트 분리로 코드 재사용성 향상
+- **타입 안전성**: TypeScript를 활용한 엄격한 타입 정의
+- **성능 최적화**: Portal을 활용한 효율적인 모달 렌더링
