docs: 문서 업데이트

--- a/src/app/[locale]/guide/en.guide.mdx
+++ b/src/app/[locale]/guide/en.guide.mdx
@@ -45,6 +45,7 @@ Ask questions in natural language and AI will recommend personalized recipes tha
 - **Personalized Recommendations**: Customized recipe suggestions based on camera model, shooting conditions, and desired mood
 - **Real-time Image Preview**: See how your photos would look with AI-recommended settings applied in real-time
 - **Integration with Existing Recipes**: Leverages our verified recipe database for reliable recommendations
+- **Camera Model Display**: Visual indicator showing the camera model used for recipe recommendations in the top-right corner
 - **Save as Custom**: Save preferred settings as personal recipes
 
 #### 🔧 Technical Features
