--- a/src/app/[locale]/note/en.note.mdx
+++ b/src/app/[locale]/note/en.note.mdx
@@ -82,12 +82,18 @@ The existing recipes page has been separated from the main page, and AI Curator 
 
 ### 🗂️ Enhanced Chat History Management
 - **Common Component**: Extracted `ConfirmModal` component for reusability
+- **UX Enhancement**: Fixed issue where chat history panel would close when modal is open
 
 ### 🎨 UI/UX Improvements
 - **Animation Effects**: Smooth modal transitions using Framer Motion
 - **Responsive Design**: Optimized modal display for mobile environments
+- **Camera Model Display**: Added visual camera model indicator in the top-right corner of AI curator responses
 
 ### 📦 Component Structure Enhancement
 - **Modularization**: Improved code reusability through common modal component separation
 - **Type Safety**: Strict type definitions using TypeScript
 - **Performance Optimization**: Efficient modal rendering using Portal
+
+### 🔧 Technical Improvements
+- **Component Optimization**: Enhanced data flow structure for passing camera model information to CuratedRecipeResponse component
+- **Data Flow Enhancement**: Consistent camera model information passing from chat messages to UI components
