--- a/src/app/[locale]/note/ko.note.mdx
+++ b/src/app/[locale]/note/ko.note.mdx
@@ -87,8 +87,13 @@
 ### 🎨 UI/UX 개선
 - **애니메이션 효과**: Framer Motion을 활용한 부드러운 모달 전환 효과
 - **반응형 디자인**: 모바일 환경에서도 최적화된 모달 표시
+- **카메라 모델 표시**: AI 큐레이터 응답에서 사용된 카메라 모델을 우측 상단에 시각적으로 표시
 
 ### 📦 컴포넌트 구조 개선
 - **모듈화**: 공통 모달 컴포넌트 분리로 코드 재사용성 향상
 - **타입 안전성**: TypeScript를 활용한 엄격한 타입 정의
 - **성능 최적화**: Portal을 활용한 효율적인 모달 렌더링
+
+### 🔧 기술적 개선
+- **컴포넌트 최적화**: CuratedRecipeResponse 컴포넌트에 카메라 모델 정보 전달 구조 개선
+- **데이터 흐름 개선**: 채팅 메시지에서 카메라 모델 정보를 UI 컴포넌트까지 일관되게 전달
